[workspace]
resolver = "2"
members = [
    "nw-tools",
    "object-stream",
    "file-system",
    "datasheet",
    "assets",
    "utils",
    "cli",
]

[workspace.dependencies]
tracing = "0.1.40"
regex = "1.10.5"
tracing-subscriber = "0.3.18"
tokio-stream = "0.1.15"
clap = { version = "4.5.9", features = ["derive"] }
cliclack = "0.3.2"
dirs = "5.0.1"
crc32fast = "1.4.2"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = { version = "1.0.120", features = ["preserve_order"] }
serde_bytes = "0.11.15"
walkdir = "2.5.0"
tokio = { version = "^1.38.0", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["compat"] }
futures = "0.3.30"
rayon = "1.10.0"
scopeguard = "1.2.0"
zip = "2.1.3"
ctrlc = "3.4.4"
uuid = { version = "^1.10.0", features = ["serde"] }
uuid-simd = "0.8.0"
quick-xml = { version = "0.36.0", features = ["serialize"] }
