[workspace]
resolver = "2"
members = [
  "nw-tools",
  "object-stream",
  "file-system",
  "datasheet",
  "assets",
  "utils",
  "cli",
]

[workspace.dependencies]
async-channel = { version = "2.3.1" }
clap = { version = "4.5.9", features = ["derive"] }
cliclack = { version = "0.3.2" }
console-subscriber = { version = "0.4.0" }
crc32fast = { version = "1.4.2" }
criterion = { version = "0.5.1", features = ["async_tokio"] }
ctrlc = { version = "3.4.4" }
dirs = { version = "5.0.1" }
flate2 = { version = "1.0.30" }
fmmap = "0.3.3"
futures = { version = "0.3.30" }
memmap2 = "0.9.4"
natord = { version = "1.0.9" }
nucleo-matcher = { version = "0.3.1" }
num_cpus = { version = "1.16.0" }
oodle-safe = { version = "0.2.0" }
ouroboros = { version = "0.18.4" }
pelite = { version = "0.10.0" }
quick-xml = { version = "0.36.0", features = ["serialize"] }
rayon = "1.10.0"
regex = { version = "1.10.5" }
rusqlite = { version = "0.32.0", features = ["bundled-full"] }
scopeguard = { version = "1.2.0" }
serde = { version = "1.0.204", features = ["derive"] }
serde_bytes = "0.11.15"
serde_json = { version = "1.0.120", features = ["preserve_order"] }
tokio = { version = "^1.38.0", features = ["full", "tracing"] }
tokio-stream = { version = "0.1.15" }
tokio-util = { version = "0.7.11", features = ["full"] }
tracing = { version = "0.1.40" }
tracing-subscriber = "0.3.18"
uuid = { version = "^1.10.0", features = ["serde"] }
uuid-simd = { version = "0.8.0" }
walkdir = { version = "2.5.0" }
zip = { version = "=2.1.3" }

[profile.release]
lto = "fat"
codegen-units = 1
