[package]
name = "nwtools-rs"
version = "0.1.3"
edition = "2021"

[dependencies]
console-subscriber = { workspace = true }
cliclack = { workspace = true }
crc32fast = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
walkdir = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true, features = ["compat"] }
futures = { workspace = true }
rayon = { workspace = true }
scopeguard = { workspace = true }
zip = { workspace = true }
ctrlc = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
file-system = { workspace = true }
assets = { workspace = true }
utils = { workspace = true }
object-stream = { workspace = true }
cli = { workspace = true }
distribution = { workspace = true }
vshapec = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio"] }

[[bench]]
name = "bench"
harness = false

[profile.release]
lto = "fat"
codegen-units = 1

[workspace]
resolver = "2"
members = [
  "object-stream",
  "file-system",
  "datasheet",
  "assets",
  "utils",
  "cli",
  "localization",
  "distribution",
  "vshapec",
]

[workspace.dependencies]
file-system = { path = "./file-system" }
assets = { path = "./assets" }
utils = { path = "./utils" }
object-stream = { path = "./object-stream" }
cli = { path = "./cli" }
distribution = { path = "./distribution" }
datasheet = { path = "./datasheet" }
vshapec = { path = "./vshapec" }
async-channel = { version = "2.3.1" }
clap = { version = "4.5.9", features = ["derive"] }
cliclack = { version = "0.3.2" }
console-subscriber = { version = "0.4.0" }
crc32fast = { version = "1.4.2" }
criterion = { version = "0.5.1", features = ["async_tokio"] }
ctrlc = { version = "3.4.4" }
dashmap = { version = "6.1.0", features = ["serde", "rayon"] }
dirs = { version = "5.0.1" }
flate2 = { version = "1.0.30" }
futures = { version = "0.3.30" }
globset = { version = "0.4.15" }
ignore = { version = "0.4.23" }
indexmap = { version = "2.6.0", features = ["rayon", "serde"] }
localization = { path = "./localization" }
memmap2 = { version = "0.9.4" }
natord = { version = "1.0.9" }
nucleo-matcher = { version = "0.3.1" }
num_cpus = { version = "1.16.0" }
oodle-safe = { version = "0.2.0" }
ouroboros = { version = "0.18.4" }
pelite = { version = "0.10.0" }
quick-xml = { version = "0.36.0", features = ["serialize"] }
rayon = { version = "1.10.0" }
regex = { version = "1.10.5" }
rusqlite = { version = "0.32.0", features = ["bundled-full"] }
schemars = { version = "0.8.21", features = ["preserve_order"] }
scopeguard = { version = "1.2.0" }
serde = { version = "1.0.204", features = ["derive"] }
serde_bytes = { version = "0.11.15" }
serde_json = { version = "1.0.120", features = ["preserve_order"] }
serde_yml = { version = "0.0.12" }
simd-json = { version = "0.13.10" }
thiserror = { version = "1.0.64" }
tokio = { version = "^1.38.0", features = ["full", "tracing"] }
tokio-stream = { version = "0.1.15" }
tokio-util = { version = "0.7.11", features = ["full"] }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18" }
uuid = { version = "^1.10.0", features = ["serde"] }
uuid-simd = { version = "0.8.0" }
walkdir = { version = "2.5.0" }
zip = { version = "=2.1.3" }
luac-parser = { version = "0.5.2" }
rmp-serde = { version = "1.3.0" }
image = { version = "0.25.4" }
ddsfile = { version = "0.5.2" }
image_dds = { version = "0.6.0" }
