[package]
name = "assets"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { workspace = true }
tokio = { workspace = true, features = ["full"] }
file-system = { path = "../file-system" }
serde = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio"] }

[[bench]]
name = "bench"
harness = false
