[package]
name = "assets"
version = "0.1.0"
edition = "2021"

[dependencies]
file-system = { path = "../file-system" }
uuid = { workspace = true }
uuid-simd = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio"] }

[[bench]]
name = "bench"
harness = false
