[package]
name = "datasheet"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "^1.38.0", features = ["full"] }
rayon = "1.10.0"
simd-json = "0.13.10"
serde = "1.0.204"
serde_json = { version = "1.0.120", features = ["preserve_order"] }
serde_yml = "0.0.10"
indexmap = { version = "2.2.6", features = ["serde"] }
crc32fast = "1.4.2"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "bench"
harness = false
