[package]
name = "datasheet"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
rayon = { workspace = true }
simd-json = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
indexmap = { workspace = true }
crc32fast = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "bench"
harness = false
