[package]
name = "file-system"
version = "0.1.0"
edition = "2021"

[dependencies]
pak = { path = "../pak" }
datasheet = { path = "../datasheet" }
object-stream = { path = "../object-stream" }
zip = "2.1.1"
walkdir = "2.5.0"
rayon = "1.10.0"
flate2 = "1.0.30"
tokio = { version = "^1.37.0", features = ["full"] }
crc32fast = "1.4.2"
pelite = "0.10.0"
uuid = "^1.8.0"
regex = "1.10.4"
serde = "1.0.203"
serde_json = { version = "1.0.117", features = ["preserve_order"] }
futures = "0.3.30"
lazy_static = "1.4.0"
nucleo-matcher = "0.3.1"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio"] }

[[bench]]
name = "bench"
harness = false

[build-dependencies]
crc32fast = "1.4.2"
uuid = "^1.8.0"
regex = "1.10.4"
serde = "1.0.203"
serde_json = { version = "1.0.117", features = ["preserve_order"] }
walkdir = "2.5.0"
rayon = "1.10.0"
dirs = "5.0.1"
zip = "2.1.1"
