[package]
name = "file-system"
version = "0.1.0"
edition = "2021"

[dependencies]
datasheet = { path = "../datasheet" }
object-stream = { path = "../object-stream" }
utils = { path = "../utils" }
zip = "2.1.3"
walkdir = "2.5.0"
rayon = "1.10.0"
flate2 = "1.0.30"
tokio = { version = "^1.38.0", features = ["full"] }
pelite = "0.10.0"
uuid = "^1.9.1"
regex = "1.10.5"
serde = "1.0.203"
serde_json = { version = "1.0.120", features = ["preserve_order"] }
futures = "0.3.30"
nucleo-matcher = "0.3.1"
tokio-stream = "0.1.15"
async-channel = "2.3.1"
natord = "1.0.9"
tokio-util = "0.7.11"
oodle-safe = "0.2.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio"] }

[[bench]]
name = "bench"
harness = false

[build-dependencies]
crc32fast = "1.4.2"
uuid = "^1.9.1"
regex = "1.10.5"
serde = "1.0.203"
serde_json = { version = "1.0.120", features = ["preserve_order"] }
walkdir = "2.5.0"
rayon = "1.10.0"
dirs = "5.0.1"
zip = "2.1.3"
