[package]
name = "file-system"
version = "0.1.0"
edition = "2021"

[dependencies]
utils = { path = "../utils" }
cli = { path = "../cli" }
object-stream = { path = "../object-stream" }
datasheet = { path = "../datasheet" }
localization = { workspace = true }
console-subscriber = { workspace = true }
async-channel = { workspace = true }
flate2 = { workspace = true }
futures = { workspace = true }
natord = { workspace = true }
nucleo-matcher = { workspace = true }
num_cpus = { workspace = true }
oodle-safe = { workspace = true }
pelite = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
scopeguard = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
uuid = { workspace = true }
walkdir = { workspace = true }
zip = { workspace = true }
memmap2 = { workspace = true }
ouroboros = { workspace = true }
quick-xml = { workspace = true }
schemars = { workspace = true }
simd-json = { workspace = true }
dashmap = { workspace = true }
globset = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "bench"
harness = false

[build-dependencies]
crc32fast = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
walkdir = { workspace = true }
rayon = { workspace = true }
dirs = { workspace = true }
zip = { workspace = true }
