[package]
name = "nw-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
file-system = { path = "../file-system" }
assets = { path = "../assets" }
utils = { path = "../utils" }
crc32fast = "1.4.2"
serde = "1.0.203"
serde_json = { version = "1.0.117", features = ["preserve_order"] }
walkdir = "2.5.0"
tokio = { version = "^1.38.0", features = ["full"] }
tokio-stream = "0.1.15"
tokio-util = { version = "0.7.11", features = ["compat"] }
clap = { version = "4.5.7", features = ["derive"] }
cliclack = "0.3.1"
dirs = "5.0.1"
futures = "0.3.30"
rayon = "1.10.0"
scopeguard = "1.2.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio"] }

[[bench]]
name = "bench"
harness = false
