[package]
name = "nw-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
file-system = { path = "../file-system" }
assets = { path = "../assets" }
utils = { path = "../utils" }
object-stream = { path = "../object-stream" }
console-subscriber = { workspace = true }
cli = { path = "../cli" }
cliclack = { workspace = true }
crc32fast = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
walkdir = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true, features = ["compat"] }
futures = { workspace = true }
rayon = { workspace = true }
scopeguard = { workspace = true }
zip = { workspace = true }
ctrlc = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio"] }

[[bench]]
name = "bench"
harness = false

[profile.release]
lto = "fat"
codegen-units = 1
