[package]
name = "object-stream"
version = "0.1.0"
edition = "2021"

[dependencies]
pak = { path = "../pak" }
uuid = "^1.8.0"
flate2 = "1.0.30"
crc32fast = "1.4.2"
pelite = "0.10.0"
regex = "1.10.4"
serde = "1.0.203"
serde_json = { version = "1.0.117" , features = ["preserve_order"] }
walkdir = "2.5.0"
rayon = "1.10.0"
