[package]
name = "pak"
version = "0.1.0"
edition = "2021"

[dependencies]
oodle-safe = { version = "0.2.0", features = ["bindgen"] }
zip = "2.1.0"
walkdir = "2.5.0"
flate2 = "1.0.30"
uuid = "1.8.0"
futures = "0.3.30"
async-trait = "0.1.80"
tokio = { version = "1.37.0", features = ["full"] }
trait-variant = "0.1.2"
