[package]
name = "pak"
version = "0.1.0"
edition = "2021"

[dependencies]
oodle-safe = { version = "^0.2.0", features = ["bindgen"] }
zip = { version = "^2.1.0", features = ["deflate-flate2"] }
walkdir = "^2.5.0"
uuid = "^1.8.0"
futures = "^0.3.30"
async-trait = "^0.1.80"
tokio = { version = "^1.37.0", features = ["full"] }
trait-variant = "^0.1.2"
tokio-util = { version = "^0.7.11", features = ["full"] }
async-compression = { version = "0.4.11", features = ["tokio", "zlib"] }
flate2 = "1.0.30"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "buffers"
harness = false
