[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio-util = "0.7.11"
crc32fast = "1.4.2"
tokio = { version = "^1.38.0" }
tokio-stream = { workspace = true }
walkdir = "2.5.0"
rayon = "1.10.0"
serde = "1.0.204"
serde_json = { version = "1.0.120", features = ["preserve_order"] }
uuid = { version = "^1.10.0", features = ["serde"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
regex = { workspace = true }
